corrected ul bullet shrink defect on list item content wrap

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -111,6 +111,7 @@ body {
         content: "";
         width: 0.26rem;
         height: 0.26rem;
+        flex: 0 0 0.26rem;
         border-radius: 100%;
         background: vars.$dark-raspberry;
         align-self: center;
